# Prototipo_AMR_ESP-IDF

./: CMakeLists.txt
ESPCAM_VISION_ARTIFICIAL/: CMakeLists.txt
ESPCAM_VISION_ARTIFICIAL/main/: main.c
ESP_LOGICA_DE_CONTROL/main/: CMakeLists.txt  main.c
ESP_LOGICA_DE_CONTROL/main/Include/: robot_config.h  xbox_config.h
ESP_LOGICA_DE_CONTROL/main/comunicacion_vision/: uart_vision.c  uart_vision.h
ESP_LOGICA_DE_CONTROL/main/esp_hid/: esp_hid_gap.c
ESP_LOGICA_DE_CONTROL/main/maquina_estado/: maquina_estado.c  maquina_estado.h
ESP_LOGICA_DE_CONTROL/main/modo_autonomo/: auto_sensores.c  hc_sr04.c  hc_sr04.h
ESP_LOGICA_DE_CONTROL/main/motor/: motor_driver.c  motor_driver.h
ESP_LOGICA_DE_CONTROL/main/xbox_hid/: xbox_handler.c  xbox_handler.h
main/: CMakeLists.txt  main.c  xbox_handler.c
main/Include/: robot_config.h
main/kinematic/: kinematic.c  kinematic.h
main/modo_autonomo/: auto_sensores.h
main/motor/: motor_driver.c  motor_driver.h
main/xbox_hid/: xbox_handler.c  xbox_handler.h
